force-app/main/default/objects/POS_Submission__c/POS_Submission__c.object-meta.xml
<CustomObject>
    <description>NPN: POS Submission: Stores the POS Submission records submitted on the partner portal.</description>
    <label>POS Submission</label>
    <nameField>
        <displayFormat>P-{0000}</displayFormat>
        <label>POS Submission Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>POS Submissions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>