force-app/main/default/objects/POS_Submission__c/fields/Account_Id__c.field-meta.xml
<CustomField>
    <fullName>Account_Id__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account Id</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>POS Submissions</relationshipLabel>
    <relationshipName>POS_Submissions</relationshipName>
    <type>Lookup</type>
</CustomField>