force-app/main/default/objects/POS_Submission__c/fields/Attachment_Link__c.field-meta.xml
<CustomField>
    <fullName>Attachment_Link__c</fullName>
    <label>POS File Link</label>
    <type>Url</type>
</CustomField>