force-app/main/default/objects/POS_Submission__c/fields/HistoricData__c.field-meta.xml
<CustomField>
    <fullName>HistoricData__c</fullName>
    <defaultValue>false</defaultValue>
    <label>HistoricData</label>
    <type>Checkbox</type>
</CustomField>