force-app/main/default/objects/POS_Submission__c/fields/Link__c.field-meta.xml
<CustomField>
    <fullName>Link__c</fullName>
    <formula>HYPERLINK(Attachment_Link__c, &apos;Click Here!&apos; )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>POS File Link</label>
    <type>Text</type>
</CustomField>