force-app/main/default/objects/POS_Submission__c/fields/MonthYearForSurf__c.field-meta.xml
<CustomField>
    <fullName>MonthYearForSurf__c</fullName>
    <formula>RIGHT(Month_Year__c,LEN(Month_Year__c) - FIND(&quot; &quot;, Month_Year__c) )
&amp; &quot;-&quot; &amp;
IF (CONTAINS( Month_Year__c, &quot;January&quot; ),&quot;01&quot;,null)&amp;
IF (CONTAINS( Month_Year__c,&quot;February&quot; ),&quot;02&quot;,null)&amp;
IF (CONTAINS( Month_Year__c,&quot;March&quot; ),&quot;03&quot;,null)&amp;
IF (CONTAINS( Month_Year__c,&quot;April&quot; ),&quot;04&quot;,null)&amp;
IF (CONTAINS( Month_Year__c,&quot;May&quot; ),&quot;05&quot;,null)&amp;
IF (CONTAINS( Month_Year__c,&quot;June&quot; ),&quot;06&quot;,null)&amp;
IF (CONTAINS( Month_Year__c,&quot;July&quot; ),&quot;07&quot;,null)&amp;
IF (CONTAINS( Month_Year__c,&quot;August&quot; ),&quot;08&quot;,null)&amp;
IF (CONTAINS( Month_Year__c,&quot;September&quot; ),&quot;09&quot;,null)&amp;
IF (CONTAINS( Month_Year__c,&quot;October&quot; ),&quot;10&quot;,null)&amp;
IF (CONTAINS( Month_Year__c,&quot;November&quot; ),&quot;11&quot;,null)&amp;
IF (CONTAINS( Month_Year__c,&quot;December&quot; ),&quot;12&quot;,null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>MonthYearForSurf</label>
    <type>Text</type>
</CustomField>