force-app/main/default/objects/POS_Submission__c/fields/Program_Type__c.field-meta.xml
<CustomField>
    <fullName>Program_Type__c</fullName>
    <label>POS Template</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Standard</fullName>
            </value>
            <value>
                <fullName>CSP</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>