force-app/main/default/objects/POS_Submission__c/fields/Upload_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Upload_Date_Time__c</fullName>
    <label>Submission Date/Time</label>
    <type>DateTime</type>
</CustomField>